assign role(s) to group(s) done